force-app/main/default/objects/Interacci_n_de_Instagram__c/Interacci_n_de_Instagram__c.object-meta.xml
<CustomObject>
    <label>Interacción de Instagram</label>
    <nameField>
        <label>Interacción de Instagram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intereracciones de Ig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>