force-app/main/default/objects/Interacci_n_de_Instagram__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Contenido del Comentario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>