force-app/main/default/objects/Interacci_n_de_Instagram__c/fields/Field12345678912345678912345678912345678__c.field-meta.xml
<CustomField>
    <fullName>Field12345678912345678912345678912345678__c</fullName>
    <label>Test Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>