force-app/main/default/objects/Interacci_n_de_Instagram__c/fields/ID_del_Comentario__c.field-meta.xml
<CustomField>
    <fullName>ID_del_Comentario__c</fullName>
    <externalId>true</externalId>
    <label>ID del Comentario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>