force-app/main/default/objects/Interacci_n_de_Instagram__c/fields/Nombre_de_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Usuario__c</fullName>
    <label>Nombre de Usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>